--- a/package.json
+++ b/package.json
@@ -11,19 +11,40 @@
   "dependencies": {
     "@react-router/node": "^7.9.2",
     "@react-router/serve": "^7.9.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "aos": "^2.3.4",
+    "firebase": "^12.1.0",
     "isbot": "^5.1.31",
+    "jszip": "^3.10.1",
+    "localforage": "^1.10.0",
     "react": "^19.1.1",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.1",
-    "react-router": "^7.9.2"
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
+    "react-router": "^7.9.2",
+    "react-scroll": "^1.9.3",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
     "@react-router/dev": "^7.9.2",
     "@tailwindcss/vite": "^4.1.13",
+    "@types/aos": "^3.0.7",
     "@types/node": "^22",
     "@types/react": "^19.1.13",
     "@types/react-dom": "^19.1.9",
+    "@types/react-scroll": "^1.8.10",
+    "@types/react-slick": "^0.23.13",
+    "autoprefixer": "^10.4.21",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.13",
     "typescript": "^5.9.2",
+    "typescript-eslint": "^8.35.1",
     "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
   }
