--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ VITE_FIREBASE_MEASUREMENT_ID=your_measurement_id_here
 
 # Google Analytics
 VITE_GA_MEASUREMENT_ID=your_ga_measurement_id_here
+
+# Backend API
+VITE_API_URL=http://localhost:3333
