--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-router/serve": "^7.9.2",
     "@tailwindcss/vite": "^4.1.11",
     "aos": "^2.3.4",
+    "axios": "^1.13.2",
     "firebase": "^12.6.0",
     "isbot": "^5.1.31",
     "jszip": "^3.10.1",
