--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isbot": "^5.1.31",
     "jszip": "^3.10.1",
     "localforage": "^1.10.0",
+    "lucide-react": "^0.562.0",
     "react": "^19.1.1",
     "react-country-flag": "^3.1.0",
     "react-dom": "^19.1.1",
